compiler/src/snapshots/arachne_compiler__compiler__tests__function__closure__capture_same_variable_twice.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 1.0.into()].into(),\n                [\"fn\".into(), [].into(),\n                            [\"+\".into(), \"x\".into(), \"x\".into()].into()].into()]).await"
---
float64 1
jump a
environment 0
environment 0
add
return
peek 0
close 4 0 1
dump
drop
