compiler/src/snapshots/arachne_compiler__compiler__tests__function__closure__compile_closure.snap
---
source: compiler/src/compiler.rs
expression: "compile([[\"let\".into(), \"x\".into(), 42.0.into()].into(),\n                [\"fn\".into(), [].into(), \"x\".into()].into()]).await"
---
float64 42
jump 7
environment 0
return
peek 0
close 4 0 1
dump
drop
